# scorefall-ink

./: .firebaserc  .gitattributes  .gitignore  Cargo.toml  README.md  firebase.json  input.md  release.sh
.github/workflows/: firebase-hosting-pull-request.yml  firebase-hosting-push.yml  push.yml
docs/: 404.html  CNAME  index.html
dst/: 404.html  index.html
ink/: Cargo.toml
ink/src/: lib.rs
muflor/: Cargo.toml  README.md
muflor/src/: glyph.rs  lib.rs  notator.rs
scof/: Cargo.toml  README.md  a.scof  compress.sh
scof/schema/: Meta.muon  Movement.muon  Style.muon
scof/scof/: About.md  Meta.muon  Style.muon  Synth.muon
scof/scof/Movement/: The Beginning.muon
scof/src/: default_movement.muon  default_style.muon  fraction.rs  lib.rs
scof/src/note/: articulation.rs  mod.rs  pitch.rs
scof/tests/: scof.rs
score2svg/: Cargo.toml  NOTES.md
score2svg/src/: svg.rs
score2svg/src/vfont/: bravura.vfont
scorefall/: Cargo.toml
scorefall-ink/: Cargo.toml
scorefall-ink-web/: Cargo.toml  README.md
scorefall-ink-web/src/: input.rs  main.rs
scorefall-ink-web/static/: index.html
scorefall-studio/: Cargo.toml
scorefall-studio/src/: lib.rs
scorefall/src/: lib.rs
sfff/: Cargo.toml  README.md
sfff/src/: lib.rs
sfstudio-web/: Cargo.toml  README.md  release.sh
sfstudio-web/src/: input.rs  main.rs
sfstudio-web/static/: 404.html  CNAME  index.html
src/: lib.rs
staverator/: Cargo.toml  modern.sfff
staverator/src/: beaming.rs  glyph.rs  lib.rs  notator.rs  notehead.rs  rhythmic_spacing.rs  svg.rs
web/: Cargo.toml  README.md  run.sh
web/site/: index.html
web/src/: glue.rs  main.rs  screen.rs
