# ScoreFall Studio - Music Composition Software
#
# Copyright (C) 2019 Jeron Aldaron Lau <jeronlau@plopgrizzly.com>, Doug P. Lau
#
#     This program is free software: you can redistribute it and/or modify
#     it under the terms of the GNU General Public License as published by
#     the Free Software Foundation, either version 3 of the License, or
#     (at your option) any later version.
# 
#     This program is distributed in the hope that it will be useful,
#     but WITHOUT ANY WARRANTY; without even the implied warranty of
#     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#     GNU General Public License for more details.
# 
#     You should have received a copy of the GNU General Public License
#     along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "scorefall"
version = "0.1.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"

license = "GPL"
description = "Music composition software."
documentation = "https://docs.rs/scorefall"
homepage = "https://app.scorefall.com/"
repository = "https://github.com/scorefall/scorefall"
readme = "README.md"
keywords = ["cross-platform", "gui", "scorefall", "music", "composition"]
categories = ["api-bindings", "data-structures", "encoding", "multimedia::audio", "multimedia"]

[dependencies]
scof = { path = "../scof" }
