# ScoreFall Studio - Music Composition Software
#
# Copyright (C) 2019-2020 Jeron Aldaron Lau <jeronlau@plopgrizzly.com>
# Copyright (C) 2019 Doug P. Lau
#
#     This program is free software: you can redistribute it and/or modify
#     it under the terms of the GNU General Public License as published by
#     the Free Software Foundation, either version 3 of the License, or
#     (at your option) any later version.
# 
#     This program is distributed in the hope that it will be useful,
#     but WITHOUT ANY WARRANTY; without even the implied warranty of
#     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#     GNU General Public License for more details.
# 
#     You should have received a copy of the GNU General Public License
#     along with this program.  If not, see <https://www.gnu.org/licenses/>.

[workspace]
members = [
    # ScoreFall Studio's "Backend"
    "scorefall",
    # ScoreFall Studio's native file format (*.scof)
    "scof",
    # ScoreFall Studio's web-based GUI
    "sfstudio-web",
    # ScoreFall Studio's render engine
    "score2svg",
]
