# ScoreFall Ink - Music Composition Software
#
# Copyright (C) 2019-2020 Jeron Aldaron Lau <jeronlau@plopgrizzly.com>
# Copyright (C) 2019-2020 Doug P. Lau
#
#     This program is free software: you can redistribute it and/or modify
#     it under the terms of the GNU General Public License as published by
#     the Free Software Foundation, either version 3 of the License, or
#     (at your option) any later version.
# 
#     This program is distributed in the hope that it will be useful,
#     but WITHOUT ANY WARRANTY; without even the implied warranty of
#     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#     GNU General Public License for more details.
# 
#     You should have received a copy of the GNU General Public License
#     along with this program.  If not, see <https://www.gnu.org/licenses/>.

[workspace]
members = [
    # ScoreFall Ink's "Backend"
    "scorefall-ink",
    # ScoreFall Ink's native file format (*.scof)
    "scof",
    # ScoreFall Ink's web-based GUI
    "scorefall-ink-web",
    # ScoreFall Ink's render engine
    "staverator",
    # ScoreFall Ink's font format parser
    "sfff",
]
