[package]
name = "scorefall-ink"
version = "0.0.1"
authors = [
    "Jeron Aldaron Lau <jeronlau@plopgrizzly.com>",
    "Doug Lau <doug.p.lau@gmail.com>",
]
edition = "2018"

license = "GPL"
description = "Music composition software."
documentation = "https://docs.rs/scorefall"
homepage = "https://ink.scorefall.com/"
repository = "https://github.com/scorefall/scorefall-ink"
readme = "README.md"
keywords = ["cross-platform", "gui", "scorefall", "music", "composition"]
categories = ["api-bindings", "data-structures", "encoding", "multimedia::audio", "multimedia"]

[dependencies]
scof = { path = "../scof" }
cala = { path = "../../cala", default-features = false }
