[package]
name = "sfstudio-web"
version = "0.1.0"
authors = [
    "Jeron Aldaron Lau <jeronlau@plopgrizzly.com>",
    "Douglas Lau <doug.p.lau@gmail.com>",
]
edition = "2018"
license = "GPL"

[dependencies]
cala = "0.7"
stdweb = "0.4"
scof = { path = "../scof" }
score2svg = { path = "../score2svg" }
scorefall = { path = "../scorefall" }
