[package]
name = "sfstudio-web"
version = "0.0.1"
authors = [
    "Jeron Aldaron Lau <jeronlau@plopgrizzly.com>",
    "Douglas Lau <doug.p.lau@gmail.com>",
]
edition = "2018"
license = "GPL"

[dependencies]
cala = "0.7"
stdweb = "0.4"
scof = { path = "../scof" }
staverator = { path = "../staverator" }
scorefall-studio = { path = "../scorefall-studio" }
