[package]
name = "staverator"
version = "0.0.1"
authors = [
    "Jeron Aldaron Lau <jeronlau@plopgrizzly.com>",
    "Douglas Lau <doug.p.lau@gmail.com>"
]
edition = "2018"
license = "GPL"

[dependencies]
sfff = { path = "../sfff" }
scof = { path = "../scof" }

[dependencies.cala]
version = "0.9"
features = ["log"]
